Ajustando materiais a granel e testes