@@ -1,14 +1,14 @@
 package com.iteletric.iteletricapi.services;
 
 import com.iteletric.iteletricapi.config.exception.BusinessException;
+import com.iteletric.iteletricapi.dtos.work.BulkMaterialRequest;
 import com.iteletric.iteletricapi.dtos.work.WorkRequest;
-import com.iteletric.iteletricapi.dtos.work.WorkResponse;
 import com.iteletric.iteletricapi.enums.material.UnitOfMeasure;
 import com.iteletric.iteletricapi.enums.user.RoleName;
+import com.iteletric.iteletricapi.models.BulkMaterial;
 import com.iteletric.iteletricapi.models.Material;
 import com.iteletric.iteletricapi.models.User;
 import com.iteletric.iteletricapi.models.Work;
-import com.iteletric.iteletricapi.repositories.BudgetRepository;
 import com.iteletric.iteletricapi.repositories.WorkRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,7 +16,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.*;
 
 import java.math.BigDecimal;
 import java.util.*;
@@ -31,43 +30,58 @@ public class WorkServiceTest {
     private WorkRepository workRepository;
 
     @Mock
-    private BudgetRepository budgetRepository;
-
-    @Mock
     private MaterialService materialService;
-
-    @Mock
-    private UserService userService;
 
     @InjectMocks
     private WorkService workService;
 
     private User user;
-    private Work work;
     private Material material;
+    private BulkMaterial bulkMaterial;
+    private Work work;
 
     @BeforeEach
     void setUp() {
-        user = User.builder().name("Diego").email("diego@gmail.com").password("123").role(RoleName.ROLE_OWNER).build();
+        user = User.builder()
+                .name("Diego")
+                .email("diego@gmail.com")
+                .password("123")
+                .role(RoleName.ROLE_OWNER)
+                .build();
+
         user.setId(1L);
-        user.setDeleted(0);
 
-        material = Material.builder().name("Fio").price(BigDecimal.valueOf(100)).quantityUnitMeasure(BigDecimal.valueOf(100)).unitMeasure(UnitOfMeasure.METERS).build();
+        material = Material.builder()
+                .name("Fio")
+                .price(BigDecimal.valueOf(100))
+                .quantityUnitMeasure(100)
+                .unitMeasure(UnitOfMeasure.METERS)
+                .build();
+
         material.setId(1L);
-        material.setOwner(user);
 
-        work = Work.builder().name("Instalação").laborPrice(BigDecimal.valueOf(100.00)).materialList(Collections.singletonList(material)).build();
-        work.setId(1L);
+        bulkMaterial = BulkMaterial.builder()
+                .id(1L)
+                .material(material)
+                .bulkQuantity(10)
+                .build();
+
+        work = Work.builder()
+                .id(1L)
+                .name("Instalação")
+                .laborPrice(BigDecimal.valueOf(100.00))
+                .materialList(Collections.singletonList(bulkMaterial))
+                .build();
     }
 
     @Test
     void create_ShouldCreateWorkSuccessfully() {
         WorkRequest request = new WorkRequest();
-        request.setName("Fio 2");
+        request.setName("Instalação");
         request.setLaborPrice(BigDecimal.valueOf(150.00));
-        request.setMaterialIdList(List.of(1L));
+        request.setMaterialList(List.of(new BulkMaterialRequest(1L, 10)));
 
-        when(materialService.getAllMaterialSelectedById(request.getMaterialIdList())).thenReturn(Collections.singletonList(material));
+        when(materialService.getById(1L)).thenReturn(material);
 
         workService.create(request);
 
@@ -75,39 +89,26 @@ public class WorkServiceTest {
     }
 
     @Test
-    void create_ShouldCreateWhenNoMaterials() {
+    void update_ShouldClearMaterialsIfNoneProvided() {
         WorkRequest request = new WorkRequest();
-        request.setName("Fio");
-        request.setLaborPrice(BigDecimal.valueOf(150.00));
-        request.setMaterialIdList(Collections.emptyList());
-
-        when(materialService.getAllMaterialSelectedById(request.getMaterialIdList())).thenReturn(Collections.emptyList());
-        workService.create(request);
-        verify(workRepository).save(any(Work.class));
-    }
-
-    @Test
-    void update_ShouldUpdateWorkSuccessfully() {
-        WorkRequest request = new WorkRequest();
-        request.setName("Cabo elétrico");
+        request.setName("Sem materiais");
         request.setLaborPrice(BigDecimal.valueOf(200.00));
-        request.setMaterialIdList(List.of(1L));
+        request.setMaterialList(new ArrayList<>());
 
         when(workRepository.findById(1L)).thenReturn(Optional.of(work));
 
-        when(materialService.getAllMaterialSelectedById(request.getMaterialIdList())).thenReturn(Collections.singletonList(material));
-
-        when(budgetRepository.findByWorkListContaining(work)).thenReturn(Collections.emptyList());
+        work.setMaterialList(new ArrayList<>(work.getMaterialList()));
 
         workService.update(1L, request);
-        assertEquals("Cabo elétrico", work.getName());
-        assertEquals(BigDecimal.valueOf(200.00), work.getLaborPrice());
+
+        assertEquals(0, work.getMaterialList().size());
+        assertEquals(BigDecimal.ZERO, work.getMaterialPrice());
 
         verify(workRepository).save(work);
     }
 
     @Test
-    void delete_ShouldDeleteWork() {
+    void delete_ShouldDeleteWorkSuccessfully() {
         when(workRepository.findById(1L)).thenReturn(Optional.of(work));
 
         workService.delete(1L);
@@ -124,7 +125,7 @@ public class WorkServiceTest {
     }
 
     @Test
-    void getById_ShouldReturnWork() {
+    void getById_ShouldReturnWorkSuccessfully() {
         when(workRepository.findById(1L)).thenReturn(Optional.of(work));
 
         Work result = workService.getById(1L);
@@ -134,7 +135,7 @@ public class WorkServiceTest {
     }
 
     @Test
-    void getById_ShouldThrowExceptionIfNotFound() {
+    void getById_ShouldThrowExceptionWhenNotFound() {
         when(workRepository.findById(1L)).thenReturn(Optional.empty());
 
         Exception exception = assertThrows(BusinessException.class, () -> workService.getById(1L));
@@ -142,8 +143,8 @@ public class WorkServiceTest {
     }
 
     @Test
-    void getAllWorkSelectedById_ShouldReturnWorks() {
-        List<Long> ids = Arrays.asList(1L, 2L);
+    void getAllWorkSelectedById_ShouldReturnWorksSuccessfully() {
+        List<Long> ids = List.of(1L, 2L);
         when(workRepository.findAllById(ids)).thenReturn(Arrays.asList(work, new Work()));
 
         List<Work> result = workService.getAllWorkSelectedById(ids);
@@ -153,88 +154,10 @@ public class WorkServiceTest {
     }
 
     @Test
-    void getAllWorkSelectedById_ShouldThrowExceptionWhenEmpty() {
-        List<Long> ids = List.of(3L);
-        when(workRepository.findAllById(ids)).thenReturn(Collections.emptyList());
+    void getAllWorkSelectedById_ShouldThrowExceptionForEmptyList() {
+        when(workRepository.findAllById(anyList())).thenReturn(Collections.emptyList());
 
-        Exception exception = assertThrows(BusinessException.class, () -> workService.getAllWorkSelectedById(ids));
+        Exception exception = assertThrows(BusinessException.class, () -> workService.getAllWorkSelectedById(List.of(1L)));
         assertEquals("Os serviços selecionados não foram encontrados", exception.getMessage());
-    }
-
-    @Test
-    void list_ShouldReturnWorkWithNameFilter() {
-        Pageable pageable = PageRequest.of(0, 5, Sort.by(Sort.Direction.ASC, "id"));
-        User currentUser = user;
-
-        Page<Work> workPage = new PageImpl<>(Collections.singletonList(work));
-        when(userService.getCurrentUser()).thenReturn(currentUser);
-        when(workRepository.findByOwnerAndNameContainingIgnoreCase(currentUser, "Instalação", pageable))
-                .thenReturn(workPage);
-
-        Page<WorkResponse> result = workService.list("Instalação", pageable);
-
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-        assertEquals("Instalação", result.getContent().get(0).getName());
-        verify(workRepository).findByOwnerAndNameContainingIgnoreCase(currentUser, "Instalação", pageable);
-    }
-
-    @Test
-    void list_ShouldReturnAllWorkWithoutNameFilter() {
-        Pageable pageable = PageRequest.of(0, 5, Sort.by(Sort.Direction.ASC, "id"));
-        User currentUser = user;
-
-        Page<Work> workPage = new PageImpl<>(Collections.singletonList(work));
-        when(userService.getCurrentUser()).thenReturn(currentUser);
-        when(workRepository.findByOwner(eq(currentUser), eq(pageable))).thenReturn(workPage);
-
-        Page<WorkResponse> result = workService.list(null, pageable);
-
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-        verify(workRepository).findByOwner(eq(currentUser), eq(pageable));
-    }
-
-    @Test
-    void update_ShouldThrowExceptionWhenWorkNotFound() {
-        WorkRequest request = new WorkRequest();
-        request.setName("Cabo elétrico");
-        request.setLaborPrice(BigDecimal.valueOf(200.00));
-        request.setMaterialIdList(List.of(1L));
-
-        when(workRepository.findById(1L)).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(BusinessException.class, () -> workService.update(1L, request));
-        assertEquals("Trabalho não encontrado", exception.getMessage());
-    }
-
-    @Test
-    void getAllWorkSelectedById_ShouldThrowExceptionForInvalidIds() {
-        List<Long> ids = List.of(1L, 2L);
-        when(workRepository.findAllById(ids)).thenReturn(Collections.emptyList());
-
-        Exception exception = assertThrows(BusinessException.class, () -> workService.getAllWorkSelectedById(ids));
-        assertEquals("Os serviços selecionados não foram encontrados", exception.getMessage());
-    }
-
-    @Test
-    void update_ShouldUpdatePriceOnly() {
-        WorkRequest request = new WorkRequest();
-        request.setLaborPrice(BigDecimal.valueOf(250.00));
-        request.setMaterialIdList(List.of(1L));
-
-        when(workRepository.findById(1L)).thenReturn(Optional.of(work));
-        when(materialService.getAllMaterialSelectedById(request.getMaterialIdList())).thenReturn(Collections.singletonList(material));
-
-        workService.update(1L, request);
-
-        assertEquals(BigDecimal.valueOf(250.00), work.getLaborPrice());
-        verify(workRepository).save(work);
-    }
-
-    @Test
-    void getById_ShouldThrowExceptionForNullId() {
-        Exception exception = assertThrows(BusinessException.class, () -> workService.getById(null));
-        assertEquals("Trabalho não encontrado", exception.getMessage());
     }
 }
